<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5FFE8"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_s_logo"
        android:fontFamily="@font/bree_serif"
        android:rotationX="10"
        android:text="@string/welcome_to_awesome_app"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#EC753C"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_s_logo"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:srcCompat="@drawable/logoawesome" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#FF5722"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/bree_serif"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:strokeColor="#D58787"
        app:strokeWidth="1dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>